# pixelator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  homework.md
examples/: CMakeLists.txt  pixelate.cpp  use_ftxui.cpp  use_stb_image.cpp
pixelator/: CMakeLists.txt  color.hpp  image.cpp  image.hpp  stb_image_data_view.cpp  stb_image_data_view.hpp
pixelator/image/: image.cpp  image.hpp
pixelator/stb_image_data_view/: size.hpp  stb_image_data_view.cpp  stb_image_data_view.hpp
